# TwinMind-AI

./: .env.example  .gitignore  docker-compose.yml  package-lock.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260629_0001_auth_foundation.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  health.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  auth.py
backend/app/schemas/: __init__.py  auth.py
backend/app/services/: __init__.py  auth_service.py
docs/: PRODUCT_FOUNDATIOM.md  ROADMAP.md  SRS.md  VISION.md
frontend/: Dockerfile  middleware.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/auth/: protected-route.tsx
frontend/src/components/providers/: app-providers.tsx
frontend/src/components/ui/: button.tsx
frontend/src/contexts/: auth-context.tsx
frontend/src/lib/: api-client.ts  auth-types.ts  token-store.ts
meeting-notes/: Day-o1.md
scripts/: setup-labels.ps1
scripts/scripts/: setup-milestones.ps1
