[project]
name = "twinmind-backend"
version = "0.1.0"
description = "FastAPI foundation for TwinMind AI."
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.17.2",
  "fastapi[standard]>=0.124.4",
  "argon2-cffi>=25.1.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.3.2",
  "pydantic-settings>=2.12.0",
  "python-jose[cryptography]>=3.5.0",
  "sqlalchemy>=2.0.45",
  "uvicorn[standard]>=0.38.0"
]

[project.optional-dependencies]
dev = [
  "black>=25.12.0",
  "mypy>=1.19.1",
  "pytest>=9.0.2",
  "ruff>=0.14.9"
]

[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
